--- a/public/popup.html
+++ b/public/popup.html
@@ -4,6 +4,8 @@
 <head>
     <title>Chrome Popup</title>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
