Fix the sudden light mode flash when default theme is dark mode

--- a/public/popup.html
+++ b/public/popup.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Chrome Popup</title>
-    <meta charset="utf-8">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
-</head>
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
+    <script src="noflash.js"></script>
     <div id="popup"></div>
     <script src="popup.js"></script>
-</body>
-
+  </body>
 </html>
